--- a/css/name-block.css
+++ b/css/name-block.css
@@ -1,11 +1,11 @@
 .name-block {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 46px;
 
     padding: 12px;
     width: 124px;
-    height: 124px;
+    min-height: 124px;
     border-radius: 12px;
     background-color: var(--background-block-1);
 
@@ -27,6 +27,7 @@
       .name {
         color: var(--text-primary-1);
         font-family: "Poppins", sans-serif;
+        line-height: 104%;
         font-size: 14px;
         font-weight: 600;
         text-align: left;
@@ -36,6 +37,7 @@
         color: var(--text-secondary-1);
         font-family: "Poppins", sans-serif;
         font-size: 12px;
+        line-height: 150%;
         font-weight: 500;
         text-align: left;
       }
