--- a/css/resume.css
+++ b/css/resume.css
@@ -6,7 +6,7 @@
   margin: 0 auto;
   padding: 20px 15px;
   width: 100%;
-  max-width: 842px;
+  max-width: 595px;
 
   .row {
     display: flex;
